Fixed ordering of answers when in shuffled group; Fixed progress calculation not dependent on assessment type; Fixed disabled student name toggle when skipped co learning; Fixed tooltip flickering on rerender; Put progress percentage on right of the bar when percentage doesn't fit inside; Fixed group description layout; Changed initial toggle tick count to reset when navigation changes;

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8033,20 +8033,31 @@ span.completion-response-object-container{
     --ck-dropdown-max-width: 200px;
 }
 
-.drawer .feedback .ck-dropdown__panel .ck.ck-form__header.ck-special-characters-navigation{
+.drawer .feedback .ck-dropdown__panel .ck.ck-form__header.ck-special-characters-navigation {
     height: auto;
     flex-wrap: wrap;
     justify-content: end;
 }
+
 .drawer .feedback .ckeditor-disabled .ck.ck-editor__main > .ck-editor__editable,
 .inline-feedback-modal .ckeditor-disabled .ck.ck-editor__main > .ck-editor__editable {
     --ck-color-base-background: white;
 }
+
 .drawer .feedback .ckeditor-disabled,
 .inline-feedback-modal .ckeditor-disabled {
     position: relative;
     pointer-events: none;
 }
+
+.progress-bar-background {
+    width: calc(100% - var(--active-sidebar-width));
+    transition: width var(--sidebar-transition)
+}
+.progress-bar-background .progress-bar {
+    transition: width 150ms ease-in
+}
+
 /*
 ! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 */
@@ -8892,6 +8903,9 @@ video {
 }
 .top-\[var\(--header-height\)\]{
   top: var(--header-height);
+}
+.-right-6{
+  right: -1.5rem;
 }
 .isolate{
   isolation: isolate;
